--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@ Start with this HTML and save it as "about_me.html":
       </style>
     </head>
     <body>
-      <h1>About Me</h1>
+      <h1>My Book List</h1>
     <h2 div class="me">My name is</h2>
-    <h2 div class="me">I am from </h2>
-      <ul>
-        <li>Nickname: <span id="nickname"></span>
-        <li>Favorites:  <span id="favorites"></span>
+   
+        <p>Nickname: <span id="nickname"></p>
+        <p>Favorites:  <span id="favorites"></p>
         <li>Hometown: <span id="hometown"></span>
-      </ul>
+      </ul> -->
       <script src="app.js"></script>
     </body>
   </html>
