--- a/forms.html
+++ b/forms.html
@@ -18,7 +18,7 @@
         </div>
         <div class="row">
             <label>Email Address</label>
-            <input type="text" name="email" min="7">
+            <input type="text" name="email" max="18">
             <div class="error" id="emailErr"></div>
         </div>
         <div class="row">
