--- a/forms.html
+++ b/forms.html
@@ -64,7 +64,7 @@
         </div>
     </form>
       <!-- linking script.js file -->
-  <script src="currency.js"></script>
+  <script src="forms.js"></script>
 </body>
 </html>
 
