--- a/forms.html
+++ b/forms.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="forms.css">
     <title>Application Form</title>
 </head>
 <body>
-    <form name="contactForm" onsubmit="return validateForm()" action="#" method="get">
+    <!-- <form name="contactForm" onsubmit="return validateForm()" action="#" method="get">
         <h2>Application Form</h2>
         <div class="row">
             <label>Full Name</label>
@@ -23,7 +23,7 @@
         </div>
         <div class="row">
             <label>Mobile Number</label>
-            <input type="tel" name="mobile" placeholder="(333)-333-3333" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+            <input type="tel" name="mobile" placeholder="333-333-3333" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
             <div class="error" id="mobileErr"></div>
         </div>
         <div class="row">
@@ -62,7 +62,62 @@
         <div class="row">
             <input type="submit" value="Submit">
         </div>
+    </form> -->
+    <form name="contactForm" onsubmit="return validateForm()" action="" method="get">
+        <h2>Application Form</h2>
+        <div class="row">
+            <label>Full Name</label>
+            <input type="text" name="name" required>
+            <div class="error" id="nameErr"></div>
+        </div>
+        <div class="row">
+            <label>Email Address</label>
+            <input type="text" name="email" min="7">
+            <div class="error" id="emailErr"></div>
+        </div>
+        <div class="row">
+            <label>Mobile Number</label>
+            <input type="text" name="mobile">
+            <div class="error" id="mobileErr"></div>
+        </div>
+        <div class="row">
+            <label>Password</label>
+            <input type="password" name="password">
+            <div class="error" id="mobileErr"></div>
+        </div>
+       
+        <div class="row">
+            <label>Country</label>
+            <select name="country">
+                <option>Select</option>
+                <option>Canada</option>
+                <option>Mexico</option>
+                <option>United States</option>
+                <option>Greenland</option>
+            </select> 
+            <div class="error" id="countryErr"></div>
+        </div>
+        <div class="row">
+            <label>Gender</label>
+            <div class="form-inline">
+                <label><input type="radio" name="gender" value="male"> Male</label>
+                <label><input type="radio" name="gender" value="female"> Female</label> 
+            </div>
+            <div class="error" id="genderErr"></div>
+        </div>
+        <div class="row">
+            <label>Hobbies <i>(Optional)</i></label>
+            <div class="form-inline">
+                <label><input type="checkbox" name="hobbies[]" value="sports"> Sports</label>
+                <label><input type="checkbox" name="hobbies[]" value="movies"> Movies</label>
+                <label><input type="checkbox" name="hobbies[]" value="music"> Music</label>  
+            </div>
+        </div>        
+        <div class="row">
+            <input type="submit" value="Submit">
+        </div>
     </form>
+   
       <!-- linking script.js file -->
   <script src="forms.js"></script>
 </body>
